<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:text="@string/hallo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_namaMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nama"
        android:textSize="18sp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="450dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>